--- a/kerner.html
+++ b/kerner.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normilize.css">
     <title>Kerner_test</title>
@@ -27,6 +28,7 @@
                         <a href="#" class="nav-link">Отзывы</a></li>
                 </nav>
                 <div class="user-block">
+                    <img src="Kerner_img/user.svg" alt="" class="user-button-logo">
                     <a href="#" class="user-button sign-in-button">Войти</a>
                     <a href="#" class="user-button  sign-up-button">Регистрация</a>
                 </div>
