--- a/kerner.html
+++ b/kerner.html
@@ -51,11 +51,10 @@
                 </div>
             </div>
         </header>
-        <div class="main-content">
-            <h1>Промышленное оборудование для сверления и металлообработки</h1>
-            <a href="#" class="catalog-btn">
-                <span class="catalog-btn-logo"></span>Перейти в каталог</a>
-        </div>
+        <h1>Промышленное оборудование для сверления и металлообработки</h1>
+        <a href="#" class="catalog-btn">
+            <span class="catalog-btn-logo"></span>Перейти в каталог
+        </a>
         <footer class="page-footer">
             <div class="offer-wrap">
                 <img src="Kerner_img/suplly.svg" alt="" class="logo-offer">
